--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
   <section id='home' class="home">
     <div class="home-container">
+      <button type="button" class="hamburger-menu"><i class="fas fa-hamburger"></i></button>
+      <button type="button" class="hamburger-menu-close"><i class="fas fa-times"></i></button>
       <nav class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
