--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <section id='home' class="home">
     <div class="home-container">
-      <button type="button" class="hamburger-menu"><i class="fas fa-hamburger"></i></button>
+      <button type="button" class="hamburger-menu active"><i class="fas fa-hamburger"></i></button>
       <button type="button" class="hamburger-menu-close"><i class="fas fa-times"></i></button>
-      <nav class="navbar">
+      <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
@@ -41,6 +41,7 @@
       </div>
     </div>
   </section>
+  <script src="script.js"></script>
 </body>
 </html>
 
