--- a/about.html
+++ b/about.html
@@ -10,19 +10,42 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>About Me</title>
   </head>
   <body>
-    <h1>About Me</h1>
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Say Hi!</a></li>
-      </ul>
-    </nav>
+    <section class="section-container">
+      <div class="container">
+        <button type="button" class="hamburger-menu active">
+          <i class="fas fa-hamburger"></i>
+        </button>
+        <button type="button" class="hamburger-menu-close">
+          <i class="fas fa-times"></i>
+        </button>
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+          </ul>
+        </nav>
+        <h1 class="content-title">About Me</h1>
+        <p class="content-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+          sapiente magni nulla quae debitis repudiandae qui, dolore architecto
+          magnam animi dicta? Modi sapiente deleniti dolore iusto nihil quas
+          sint dolores.
+        </p>
+      </div>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
