--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id='home' class="home">
-    <div class="home-container">
+  <section id='home' class="section-container">
+    <div class="container">
       <button type="button" class="hamburger-menu active"><i class="fas fa-hamburger"></i></button>
       <button type="button" class="hamburger-menu-close"><i class="fas fa-times"></i></button>
       <nav id="navbar" class="navbar">
@@ -22,7 +22,7 @@
           <li><a href="projects.html">Projects</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Say Hi!</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
         </ul>
       </nav>
       <nav id="social-links" class="social-links">
@@ -35,9 +35,9 @@
       </nav>
       <div class="home-content">
         <img src="images\avatarimage.jpg" alt="Tia Koenig" class="tia-photo">
-        <h1 class="home-content-title">Tia Sharlee Koenig</h1>
-        <h2 class="home-content-subtitle">Web Developer</h2>
-        <p class="home-content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis vitae amet ullam animi repellat eum! Minus voluptatem vitae unde repudiandae cumque, id quas velit molestiae dicta dolor optio eaque. Aut ut odit sapiente autem commodi laudantium nihil deserunt sint culpa? Atque veritatis impedit dignissimos, architecto doloremque odio facere quisquam at.</p>
+        <h1 class="content-title">Tia Sharlee Koenig</h1>
+        <h2 class="content-subtitle">Web Developer</h2>
+        <p class="content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis vitae amet ullam animi repellat eum! Minus voluptatem vitae unde repudiandae cumque, id quas velit molestiae dicta dolor optio eaque. Aut ut odit sapiente autem commodi laudantium nihil deserunt sint culpa? Atque veritatis impedit dignissimos, architecto doloremque odio facere quisquam at.</p>
       </div>
     </div>
   </section>
