--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
@@ -14,15 +20,26 @@
     <title>Projects</title>
   </head>
   <body>
-    <h1>Projects</h1>
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Say Hi!</a></li>
-      </ul>
-    </nav>
+    <section class="section-container">
+      <div class="container">
+        <button type="button" class="hamburger-menu active">
+          <i class="fas fa-hamburger"></i>
+        </button>
+        <button type="button" class="hamburger-menu-close">
+          <i class="fas fa-times"></i>
+        </button>
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+          </ul>
+        </nav>
+        <h1 class="content-title">Projects</h1>
+      </div>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
