--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="about.html">About Me</a></li>
+          <li><a href="experience.html">Experience</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact Me</a></li>
         </ul>
@@ -30,13 +30,13 @@
           <li class="social-links-icon"><a href="https://www.linkedin.com/in/tiakoenig/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></a></i></li>
           <li class="social-links-icon"><a href="https://github.com/Tia-Koenig" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a></li>
           <li class="social-links-icon"><a href="https://twitter.com/Tia_in_Tech" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter-square"></i></a></li>
-          <li class="social-links-icon"><a href="mailto:tiakoenig1994@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fas fa-envelope"></i></a></li>
+          <li class="social-links-icon"><a href="https://www.instagram.com/tiaaalalala/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square"></i></a></li>
         </ul>
       </nav>
       <div class="home-content">
         <img src="images\avatarimage.jpg" alt="Tia Koenig" class="tia-photo">
-        <h1 class="content-title">Tia Sharlee Koenig</h1>
-        <h2 class="content-subtitle">Web Developer</h2>
+        <h1 class="home-title title">Tia Sharlee Koenig</h1>
+        <h2 class="home-subtitle sub-title">Web Developer</h2>
         <p class="content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis vitae amet ullam animi repellat eum! Minus voluptatem vitae unde repudiandae cumque, id quas velit molestiae dicta dolor optio eaque. Aut ut odit sapiente autem commodi laudantium nihil deserunt sint culpa? Atque veritatis impedit dignissimos, architecto doloremque odio facere quisquam at.</p>
       </div>
     </div>
