added content to experience page and initial styling

--- a/experience.html
+++ b/experience.html
@@ -37,7 +37,13 @@
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
-        <h1 class="content-title">Experience</h1>
+        <h1 class="content-title">Experience<span>.</span></h1>
+        <div class="experience-content">
+          <div class="coder-academy">
+            <h1>Coder Academy</h1>
+            <p>I began my journey at Coder Academy on August 16th 2021</p>
+          </div>
+        </div>
       </div>
     </section>
     <script src="script.js"></script>
