--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,8 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styling/blog.css" />
+    <link rel="stylesheet" href="styling/style.css" />
     <title>Blog</title>
   </head>
   <body>
@@ -34,10 +35,38 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
-        <h1 class="content-title">Blog</h1>
+        <h1 class="content-title">Blog<span>.</span></h1>
+        <div class="blog-content">
+          <img src="/images/music.jpg" alt="Dj equipment" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero,
+            magni eius voluptates cupiditate nisi ipsum illo error! Maxime
+            reprehenderit atque excepturi voluptatibus a non, odio debitis
+            adipisci provident dolores in.
+          </p>
+        </div>
+        <div class="blog-content">
+          <img src="/images/music.jpg" alt="Dj equipment" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero,
+            magni eius voluptates cupiditate nisi ipsum illo error! Maxime
+            reprehenderit atque excepturi voluptatibus a non, odio debitis
+            adipisci provident dolores in.
+          </p>
+        </div>
+        <div class="blog-content">
+          <img src="/images/music.jpg" alt="Dj equipment" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero,
+            magni eius voluptates cupiditate nisi ipsum illo error! Maxime
+            reprehenderit atque excepturi voluptatibus a non, odio debitis
+            adipisci provident dolores in.
+          </p>
+        </div>
       </div>
     </section>
     <script src="script.js"></script>
