--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,8 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styling/contact.css" />
+    <link rel="stylesheet" href="styling/style.css" />
     <title>Contact</title>
   </head>
   <body>
@@ -34,6 +35,7 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
