--- a/experience.html
+++ b/experience.html
@@ -16,7 +16,8 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styling/style.css" />
+    <link rel="stylesheet" href="styling/experience.css" />
     <title>Experience</title>
   </head>
   <body>
@@ -34,6 +35,7 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
@@ -41,7 +43,7 @@
         <div class="experience-content">
           <div class="coder-academy">
             <h1>Coder Academy</h1>
-            <p>I began my journey at Coder Academy on August 16th 2021</p>
+            <p>August 16th 2021 - February 22nd 2021</p>
           </div>
         </div>
       </div>
