--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styling/style.css">
 </head>
 <body>
   <section id='home' class="section-container">
@@ -22,6 +22,7 @@
           <li><a href="projects.html">Projects</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact Me</a></li>
         </ul>
       </nav>
