--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styling/style.css" />
+    <link rel="stylesheet" href="styling/projects.css" />
     <title>Projects</title>
   </head>
   <body>
@@ -34,10 +35,11 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
-        <h1 class="content-title">Projects</h1>
+        <h1 class="content-title">Projects<span>.</span></h1>
       </div>
     </section>
     <script src="script.js"></script>
