--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,9 @@
             <h1 class="content-title">About Me<span>.</span></h1>
             <div class="aboutme-content">
               <img src="/images/musicforaboutme.jpg" alt="Music Mixing Software">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sed nisi corrupti dicta similique molestiae!</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sed nisi corrupti dicta similique molestiae!
+                danuwas butt
+              </p>
             </div>
             <div class="aboutme-content">
               <img src="/images/food.jpg" alt="Food">
