Updated markup and styling

--- a/aboutme.html
+++ b/aboutme.html
@@ -39,22 +39,27 @@
             <h1 class="content-title">About Me<span>.</span></h1>
             <div class="aboutme-content">
               <img src="/images/musicforaboutme.jpg" alt="Music Mixing Software">
+              <h1 class="aboutme-titles">Music feeds my soul<span>.</span></h1>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sed nisi corrupti dicta similique molestiae!</p>
             </div>
-            <div class="aboutme-content">
+            <!-- <div class="aboutme-content">
               <img src="/images/food.jpg" alt="Food">
+              <h1 class="aboutme-titles">My favourite things to eat<span>.</span></h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, tempora quas minima atque magni exercitationem!</p>
-            </div>
+            </div> -->
             <div class="aboutme-content">
               <img src="/images/camera.jpg" alt="Camera">
+              <h1 class="aboutme-titles">My Photography<span>.</span></h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, tempora quas minima atque magni exercitationem!</p>
             </div>
             <div class="aboutme-content">
               <img src="/images/interests.jpg" alt="Forest">
+              <h1 class="aboutme-titles">The things i love to do<span>.</span></h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, tempora quas minima atque magni exercitationem!</p>
             </div>
             <div class="aboutme-content">
               <img src="/images/travel.jpg" alt="Travel">
+              <h1 class="aboutme-titles">The places i've seen<span>.</span></h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, tempora quas minima atque magni exercitationem!</p>
             </div>
       </div>
