--- a/experience.html
+++ b/experience.html
@@ -41,9 +41,13 @@
         </nav>
         <h1 class="content-title">Experience<span>.</span></h1>
         <div class="experience-content">
-          <div class="coder-academy">
+          <div class="experience-content">
             <h1>Coder Academy</h1>
-            <p>August 16th 2021 - February 22nd 2021</p>
+            <p>August 16th 2021 - February 6th 2022</p>
+          </div>
+          <div class="experience-content">
+            <h1>Nintendo</h1>
+            <p>Developer at Nintendo - Zelda</p>
           </div>
         </div>
       </div>
