added photography page link to about me page, spotify icon added and linked, filler photos added to photography page

--- a/aboutme.html
+++ b/aboutme.html
@@ -39,9 +39,8 @@
             <h1 class="content-title">About Me<span>.</span></h1>
             <div class="aboutme-content">
               <img src="/images/musicforaboutme.jpg" alt="Music Mixing Software">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sed nisi corrupti dicta similique molestiae!
-                danuwas butt
-              </p>
+              <h1 class="aboutme-titles">Music that feeds my soul<span>.</span></h1>
+              <a class="aboutme-spotifylink" href="https://open.spotify.com/user/12173021127?si=uylyjuMeSCy9-VZ24OWJng&utm_source=copy-link&dl_branch=1" target="_blank" rel="noopener noreferrer"><i class="fab fa-spotify"></i></a>
             </div>
             <!-- <div class="aboutme-content">
               <img src="/images/food.jpg" alt="Food">
@@ -50,18 +49,18 @@
             </div> -->
             <div class="aboutme-content">
               <img src="/images/camera.jpg" alt="Camera">
-              <h1 class="aboutme-titles">My Photography<span>.</span></h1>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, tempora quas minima atque magni exercitationem!</p>
+              <h1 class="aboutme-titles"><a href="Photography.html">My Photography</a><span>.</span></h1>
+              <p>Just some pretty pictures</p>
             </div>
             <div class="aboutme-content">
               <img src="/images/interests.jpg" alt="Forest">
               <h1 class="aboutme-titles">The things i love to do<span>.</span></h1>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, tempora quas minima atque magni exercitationem!</p>
+              <p>hobbies, stuff i like to do? hiking? gaming? </p>
             </div>
             <div class="aboutme-content">
               <img src="/images/travel.jpg" alt="Travel">
               <h1 class="aboutme-titles">The places i've seen<span>.</span></h1>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, tempora quas minima atque magni exercitationem!</p>
+              <p></p>
             </div>
       </div>
     </section>
