--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img src="images\avatarimage.jpg" alt="Tia Koenig" class="tia-photo">
         <h1 class="home-title title">Tia Sharlee Koenig</h1>
         <h2 class="home-subtitle sub-title">Web Developer</h2>
-        <p class="content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis vitae amet ullam animi repellat eum! Minus voluptatem vitae unde repudiandae cumque, id quas velit molestiae dicta dolor optio eaque. Aut ut odit sapiente autem commodi laudantium nihil deserunt sint culpa? Atque veritatis impedit dignissimos, architecto doloremque odio facere quisquam at.</p>
+        <p class="content-description">Welcome to my Portfolio, feel free to explore and learn about me, make sure to send me some words!</p>
       </div>
     </div>
   </section>
