--- a/photography.html
+++ b/photography.html
@@ -7,18 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styling/style.css" />
-    <link rel="stylesheet" href="styling/experience.css" />
-    <title>Experience</title>
+    <link rel="stylesheet" href="styling/photography.css" />
+    <title>Photography</title>
   </head>
   <body>
     <section class="section-container">
@@ -29,7 +29,7 @@
         <button type="button" class="hamburger-menu-close">
           <i class="fas fa-times"></i>
         </button>
-        <nav class="navbar" id="navbar">
+        <nav id="navbar" class="navbar">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -39,13 +39,16 @@
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
-        <h1 class="content-title">Experience<span>.</span></h1>
-        <div class="experience-content">
-          <div class="experience-content">
-            <h1>Coder Academy</h1>
-            <p>August 16th 2021 - February 6th 2022</p>
-          </div>
-        </div>
+        <h1 class="content-title">Photography<span>.</span></h1>
+      </div>
+      <div class="grid-container">
+        <div class="box a"></div>
+        <div class="box b"></div>
+        <div class="box c"></div>
+        <div class="box d"></div>
+        <div class="box e"></div>
+        <div class="box f"></div>
+        <div class="box g"></div>
       </div>
     </section>
     <script src="script.js"></script>
