added education page

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="projects.html">Projects</a></li>
-              <li><a href="experience.html">Experience</a></li>
+              <li><a href="experience.html">Skills</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="aboutme.html">About Me</a></li>
               <li><a href="contact.html">Contact Me</a></li>
@@ -57,11 +57,11 @@
               <h1 class="aboutme-titles">The things i love to do<span>.</span></h1>
               <p>hobbies, stuff i like to do? hiking? gaming? </p>
             </div>
-            <div class="aboutme-content">
+            <!-- <div class="aboutme-content">
               <img src="/images/travel.jpg" alt="Travel">
               <h1 class="aboutme-titles">The places i've seen<span>.</span></h1>
               <p></p>
-            </div>
+            </div> -->
       </div>
     </section>
     <script src="script.js"></script>
