--- a/education.html
+++ b/education.html
@@ -17,8 +17,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styling/style.css" />
-    <link rel="stylesheet" href="styling/photography.css" />
-    <title>Photography</title>
+    <link rel="stylesheet" href="styling/education.css" />
+    <title>Education</title>
   </head>
   <body>
     <section class="section-container">
@@ -39,42 +39,13 @@
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
-        <h1 class="content-title">Photography<span>.</span></h1>
       </div>
-      <div class="grid-container">
-        <div class="box a">
-          <img src="/images/tiasunset.jpg" alt="sunset" class="box a" />
-        </div>
-        <div class="box b">
-          <img src="/images/wattle.jpg" alt="wattle tree" class="box b" />
-        </div>
-        <div class="box c">
-          <img
-            src="/images/watertree.jpg"
-            alt="tree over water"
-            class="box c"
-          />
-        </div>
-        <div class="box d">
-          <img src="/images/photo12.jpg" alt="sky with clouds" class="box d" />
-        </div>
-        <div class="box e">
-          <img
-            src="/images/sun-forest-people2.jpg"
-            alt="people in forest"
-            class="box e"
-          />
-        </div>
-        <div class="box f">
-          <img
-            src="/images/moontree.jpg"
-            alt="moon in branches"
-            class="box f"
-          />
-        </div>
-        <div class="box g">
-          <img src="/images/frog.jpg" alt="frog on flower" class="box g" />
-        </div>
+      <div class="education-title">
+        <h1>Education<span>.</span></h1>
+      </div>
+      <div class="coder-academy">
+        <h1>Coder Academy<span>.</span></h1>
+        <p>August 2021 - February 2022</p>
       </div>
     </section>
     <script src="script.js"></script>
