--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="experience.html">Skills</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact Me</a></li>
@@ -36,10 +36,11 @@
       </nav>
       <div class="home-content">
         <img src="images\avatarimage.jpg" alt="Tia Koenig" class="tia-photo">
-        <h1 class="home-title title">Tia Sharlee Koenig</h1>
-        <h2 class="home-subtitle sub-title">Web Developer</h2>
+        <h1 class="home-title title">Tia Sharlee Koenig<span>.</span></h1>
+        <h2 class="home-subtitle sub-title">Web Developer<span>.</span></h2>
         <p class="content-description">Welcome to my Portfolio, feel free to explore and learn about me, make sure to send me some words!</p>
       </div>
+      <div class="home-contact-link"><a href="contact.html">Contact Me<span>.</span></a></div>
     </div>
   </section>
   <script src="script.js"></script>
