--- a/projects.html
+++ b/projects.html
@@ -33,13 +33,16 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="experience.html">Experience</a></li>
+            <li><a href="experience.html">Skills</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
         <h1 class="content-title">Projects<span>.</span></h1>
+      </div>
+      <div class="education-link">
+        <h1><a href="education.html">Education</a><span>.</span></h1>
       </div>
     </section>
     <script src="script.js"></script>
