--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="experience.html">Experience</a></li>
+            <li><a href="experience.html">Skills</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
@@ -41,7 +41,8 @@
         </nav>
         <h1 class="content-title">Blog<span>.</span></h1>
         <div class="blog-content">
-          <img src="/images/music.jpg" alt="Dj equipment" />
+          <img src="/images/headphones.jpg" alt="head phones" />
+          <h1 class="blog-title">What music is to me</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero,
             magni eius voluptates cupiditate nisi ipsum illo error! Maxime
@@ -50,7 +51,8 @@
           </p>
         </div>
         <div class="blog-content">
-          <img src="/images/music.jpg" alt="Dj equipment" />
+          <img src="/images/hiking-ilysm.jpg" alt="forest" />
+          <h1 class="blog-title">Hiking - ilysm</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero,
             magni eius voluptates cupiditate nisi ipsum illo error! Maxime
@@ -59,7 +61,18 @@
           </p>
         </div>
         <div class="blog-content">
-          <img src="/images/music.jpg" alt="Dj equipment" />
+          <img src="/images/londonphone.jpg" alt="London" />
+          <h1 class="blog-title">London - i miss you</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero,
+            magni eius voluptates cupiditate nisi ipsum illo error! Maxime
+            reprehenderit atque excepturi voluptatibus a non, odio debitis
+            adipisci provident dolores in.
+          </p>
+        </div>
+        <div class="blog-content">
+          <img src="/images/gameboy.jpg" alt="Game Boy" />
+          <h1 class="blog-title">Games forever in my life</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero,
             magni eius voluptates cupiditate nisi ipsum illo error! Maxime
