--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="experience.html">Experience</a></li>
+            <li><a href="experience.html">Skills</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="contact.html">Contact Me</a></li>
